optimize feed processing and feed import